@@ -1,3 +1,7 @@
+2016-08-11  Martin Liska  <mliska@suse.cz>
+
+	* mark_spam.py: Mark attachments as obsolete and rename them.
+
 2016-08-03  Eric Gallager  <egall@gwmail.gwu.edu>
 
 	* download_prerequisites: Explicitly remove existing symlinks
